--- a/SitioWebCarrera/src/app/shared/components/header/header-shared.component.html
+++ b/SitioWebCarrera/src/app/shared/components/header/header-shared.component.html
@@ -2,6 +2,15 @@
   <div class="container header-content">
 
     <div class="header-text">
+      <!-- Logo -->
+      <a class="navbar-brand d-flex align-items-center" routerLink="/">
+        <img
+          src="/assets/img/unistmo-logo.png"
+          alt="Universidad del Istmo"
+          class="logo-institucional"
+        />
+      </a>
+
       <h1 class="header-title">Universidad del Istmo</h1>
       <p class="header-subtitle">
         Ciencia, cultura y compromiso con el desarrollo regional
