--- a/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.css
+++ b/SitioWebCarrera/src/app/pages/planEstudio/PlanEstudio-page.component.css
@@ -171,7 +171,7 @@ input[type="radio"] {
 /* Etiqueta del nivel de formación */
 .badge {
     background-color: #85272d;
-    color: #ffffff;
+    color: #a09d9d;
     padding: 6px 14px;
     border-radius: 6px;
     font-size: 13px;
