--- a/SitioWebCarrera/src/app/shared/components/footer/footer-shared.component.html
+++ b/SitioWebCarrera/src/app/shared/components/footer/footer-shared.component.html
@@ -29,7 +29,7 @@
       <div class="social-group">
 
         <!-- Facebook -->
-        <a href="#" class="social-icon" aria-label="Facebook">
+        <a href="https://www.facebook.com/InformaticaUnistmo" class="social-icon" aria-label="Facebook">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
             viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -38,7 +38,7 @@
         </a>
 
         <!-- Instagram -->
-        <a href="#" class="social-icon" aria-label="Instagram">
+        <a href="https://www.instagram.com/idssi.unistmo/" class="social-icon" aria-label="Instagram">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
             viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -49,7 +49,7 @@
         </a>
 
         <!-- YouTube -->
-        <a href="#" class="social-icon" aria-label="YouTube">
+        <a href="https://www.youtube.com/@informaticaunistmo7398" class="social-icon" aria-label="YouTube">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
             viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
@@ -62,7 +62,7 @@
         </a>
 
         <!-- Twitter -->
-        <a href="#" class="social-icon" aria-label="Twitter">
+        <a href="https://x.com/IUnistmo" class="social-icon" aria-label="Twitter">
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
             viewBox="0 0 24 24" fill="none" stroke="currentColor"
             stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
