commit arreglo, rutas de imagenes
Se arregla la ruta de las imagenes en header e inicio

--- a/SitioWebCarrera/src/app/pages/inicio/inicio-pages.component.html
+++ b/SitioWebCarrera/src/app/pages/inicio/inicio-pages.component.html
@@ -10,7 +10,7 @@
         <div class="grid-cards">
             <div class="card card-green">
                 <div class="icon-wrapper">
-                    <img src="./Imagenes/Excelencia.png" alt="Icono de Excelencia Académica" class="card-icon">
+                    <img src="Imagenes/Excelencia.png" alt="Icono de Excelencia Académica" class="card-icon">
                 </div>
                 <h3>Excelencia Académica</h3>
                 <p>Programas educativos de alta calidad enfocados en el desarrollo integral de nuestros estudiantes.</p>
@@ -18,7 +18,7 @@
 
             <div class="card card-red">
                 <div class="icon-wrapper">
-                    <img src="./Imagenes/Tecnologia.png" alt="Icono de Tecnología Avanzada" class="card-icon">
+                    <img src="Imagenes/Tecnologia.png" alt="Icono de Tecnología Avanzada" class="card-icon">
                 </div>
                 <h3>Tecnología Avanzada</h3>
                 <p>Infraestructura moderna y recursos tecnológicos de vanguardia para tu aprendizaje.</p>
@@ -26,7 +26,7 @@
 
             <div class="card card-green">
                 <div class="icon-wrapper">
-                    <img src="./Imagenes/Vinculacion.png" alt="Icono de Vinculación Regional" class="card-icon">
+                    <img src="Imagenes/Vinculacion.png" alt="Icono de Vinculación Regional" class="card-icon">
                 </div>
                 <h3>Vinculación Regional</h3>
                 <p>Conexión directa con el sector productivo y las necesidades de la región.</p>
