--- a/SitioWebCarrera/src/app/shared/components/header/header-shared.component.html
+++ b/SitioWebCarrera/src/app/shared/components/header/header-shared.component.html
@@ -4,7 +4,7 @@
     <div class="header-brand">
       <!-- Logo -->
       <img
-        src="/assets/img/unistmo-logo.png"
+        src="assets/img/unistmo-logo.png"
         alt="Universidad del Istmo"
         class="header-logo"
       />
