--- a/SitioWebCarrera/src/app/pages/aspirantes/aspirantes-pages.component.html
+++ b/SitioWebCarrera/src/app/pages/aspirantes/aspirantes-pages.component.html
@@ -41,8 +41,15 @@
     </div>
 
   </div>
+<a
+  class="btn-principal"
+  href="https://www.unistmo.edu.mx/web/p_ensenanza/ingreso/FORMATO_SOLICITUD_FICHA_LICENCIATURA.pdf"
+  target="_blank"
+  rel="noopener noreferrer"
+>
+  Iniciar registro
+</a>
 
-  <button class="btn-principal">Iniciar Registro →</button>
 </section>
 
   <!-- INFO -->
@@ -94,8 +101,8 @@
     </p>
 
     <div class="cta-botones">
-      <button class="btn-blanco">Contactar Admisiones</button>
-      <button class="btn-outline">Descargar Guía</button>
+      <button class="btn-cta">Contactar Admisiones</button>
+      <button class="btn-cta">Descargar Guía</button>
     </div>
   </section>
 
