--- a/SitioWebCarrera/src/app/shared/components/footer/footer-shared.component.css
+++ b/SitioWebCarrera/src/app/shared/components/footer/footer-shared.component.css
@@ -56,7 +56,7 @@
 .social-icon {
     width: 40px;
     height: 40px;
-    background-color: #374151;
+    background-color: #8a2a2a;
     color: white;
     display: flex;
     align-items: center;
