--- a/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.html
+++ b/SitioWebCarrera/src/app/pages/proyectos/proyectos-page.component.html
@@ -83,7 +83,7 @@
     <div class="col-12 col-md-6 col-lg-4 project-item sistemas">
       <div class="card project-card">
         <div class="card-img-top-wrapper">
-          <img src="assets/img/proy3.webp" alt="Sensor de Personas">
+          <img src="assets/img/sensor.jpg" alt="Sensor de Personas">
         </div>
         <div class="card-body">
           <span class="card-category">Sistemas Inteligentes</span>
@@ -156,19 +156,22 @@
 
     <div class="row g-4">
       <div class="col-6 col-md-4">
-        <img src="assets/img/LabElectronica.jpg" class="img-fluid rounded" alt="Laboratorio 1">
+        <img src="assets/img/Electronica1.jpg" class="img-fluid rounded" alt="Laboratorio de Electronica">
       </div>
       <div class="col-6 col-md-4">
-        <img src="assets/img/Elect.jpg" class="img-fluid rounded" alt="Laboratorio 2">
+        <img src="assets/img/Elect.jpg" class="img-fluid rounded" alt="Laboratorio de Electronica">
       </div>
       <div class="col-6 col-md-4">
-        <img src="assets/img/SalaRedes.jpg" class="img-fluid rounded" alt="Aula informática">
+        <img src="assets/img/SalaRedes.jpg" class="img-fluid rounded" alt="Sala de Redes">
       </div>
       <div class="col-6 col-md-4">
-        <img src="assets/img/Estatua.jpg" class="img-fluid rounded" alt="Área de investigación">
+        <img src="assets/img/Auditorio.jpg" class="img-fluid rounded" alt="Auditorio">
       </div>
       <div class="col-6 col-md-4">
-        <img src="assets/img/Auditorio.jpg" class="img-fluid rounded" alt="Área de investigación">
+        <img src="assets/img/Estatua.jpg" class="img-fluid rounded" alt="Estatua">
+      </div>
+      <div class="col-6 col-md-4">
+        <img src="assets/img/Electronica2.jpg" class="img-fluid rounded" alt="Laboratorio de Electronica">
       </div>
     </div>
   </div>
